revised the SEO

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     content="width=device-width, initial-scale=1.0"
   />
   <!-- Updated Title & Meta for Improved SEO -->
-  <title>About Talk with Sian | Expert Therapy Services in Chester &amp; Flintshire</title>
+  <title>About Sian – Professional Therapist, EFT Therapy &amp; Counselling in Chester &amp; Flintshire</title>
   <link rel="icon" href="images/logo-talk-with-sian.jpg" type="image/jpeg" />
   <link href="css/about.css" rel="stylesheet" />
   <link
@@ -17,12 +17,12 @@
 
   <meta
     name="description"
-    content="Learn about Talk with Sian, a trusted provider of therapy services in Chester &amp; Flintshire. Discover my approach to compassionate and evidence-based therapy from the best professional therapist. Connect today for expert guidance."
-  />
+    content="Discover Therapy Chester with Talk with Sian – your professional therapist offering EFT therapy and compassionate counselling in Chester &amp; Flintshire. Talk with a therapist for expert guidance."
+    />
   <meta
     name="keywords"
-    content="therapy Chester, counselling Chester, mental health services Chester, Sian Jones therapist, person centred therapy Chester, mindfulness therapy Chester, best therapist, professional therapist, professional counselling, counselling Chester, therapy Flintshire"
-  />
+    content="Therapy Chester, Professional Therapist, Talk with a Therapist, EFT Therapy, Counselling Chester, Chester, Flintshire"
+    />
   <meta name="robots" content="index, follow" />
   <meta name="author" content="Talk with Sian" />
   <meta name="geo.region" content="GB" />
@@ -31,24 +31,24 @@
   <meta name="ICBM" content="53.1905, -2.8919" />
   <meta
     property="og:title"
-    content="About Me | Talk with Sian – Trusted Therapy in Chester &amp; Flintshire"
-  />
+    content="About Talk with Sian | Therapy Chester – Professional Therapist in Chester &amp; Flintshire"
+    />
   <meta
     property="og:description"
-    content="Learn more about Talk with Sian and my approach to therapy. Serving clients in Chester &amp; Flintshire with evidence-based and compassionate care from the best professional therapist."
-  />
+    content="Learn about Therapy Chester with Talk with Sian. I offer expert EFT therapy and professional counselling in Chester &amp; Flintshire. Talk with a therapist today for compassionate support."
+    />
   <meta property="og:url" content="https://talkwithsian.com/about" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="images/logo-talk-with-sian.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta
     name="twitter:title"
-    content="About Me | Talk with Sian – Trusted Therapy in Chester &amp; Flintshire"
-  />
+    content="About Talk with Sian | Therapy Chester – Professional Therapist in Chester &amp; Flintshire"
+    />
   <meta
     name="twitter:description"
-    content="Discover how Talk with Sian offers expert, evidence-based therapy services in Chester &amp; Flintshire. Connect with a trusted, professional female therapist today."
-  />
+    content="Discover Therapy Chester – expert EFT therapy and professional counselling by Talk with Sian. Talk with a therapist today for caring support in Chester &amp; Flintshire."
+    />
   <meta name="twitter:image" content="images/logo-talk-with-sian.jpg" />
   <link rel="canonical" href="https://talkwithsian.com/about/" />
 
@@ -145,12 +145,12 @@
   <div class="container content-container flex-grow-1 d-flex-column align-items-center justify-content-center pt-5 mt-5">
 
     <div class="hero-section my-5">
-      <h1>About Talk with Sian – Your Expert Female Therapist in Chester &amp; Flintshire</h1>
+      <h1>A Professional Therapist in Chester &amp; Flintshire</h1>
       <p class="text-white">
-        Committed to providing the best professional counselling and evidence-based therapy, I combine heart-centred care with proven techniques to help you thrive.
+        Committed to delivering expert EFT therapy and compassionate counselling.
       </p>
       <div class="text-center mt-4">
-        <a href="contact.html" class="cta-button">Book Your Free Consultation with the Best Professional Therapist in Chester &amp; Flintshire</a>
+        <a href="contact.html" class="cta-button">Book Your Free Consultation – Talk with a Therapist</a>
       </div>
     </div>
 
@@ -168,7 +168,7 @@
         <p>
           With over 10 years of experience in the field of mental health, I specialise in person centred therapy and mindfulness techniques. I deliver professional counselling services designed to help you achieve balance and fulfilment, establishing myself as one of the best therapists in the region.
         </p>
-        <a href="contact.html">Get in Touch</a>
+        <a href="contact.html">Talk with a Professional Therapist</a>
       </div>
     </div>
 
@@ -474,7 +474,7 @@
         personalised treatment plan aligned with your goals.
       </p>
       <div class="text-center mt-4">
-        <a href="services.html" class="cta-button">Schedule Your First Session</a>
+        <a href="services.html" class="cta-button">Schedule Your Session – Talk with a Therapist</a>
       </div>
     </div>
   </div> <!-- End .content-container -->
