--- a/eft-therapy.html
+++ b/eft-therapy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>EFT Tapping Therapy in Chester & Cheshire | Talk with Sian</title>
+  <title>Therapy Chester – EFT Tapping Therapy & Professional Support in Chester & Flintshire</title>
 
   <!-- Favicon -->
   <link rel="icon" href="images/logo-talk-with-sian.jpg" type="image/jpeg" />
@@ -11,12 +11,12 @@
   <!-- SEO Meta Tags -->
   <meta
     name="description"
-    content="Discover Emotional Freedom Technique (EFT Tapping) at Talk with Sian. Our sessions help women across Chester and Cheshire overcome anxiety, trauma, and stress."
-  />
+    content="Discover Therapy Chester with our expert EFT Tapping Therapy sessions. Talk with a professional therapist at Talk with Sian to overcome anxiety, trauma, and stress in Chester & Flintshire."
+    />
   <meta
     name="keywords"
-    content="EFT Tapping, Emotional Freedom Technique, Tapping Therapy, Emotional Freedom Tapping, Tapping Emotional Freedom Technique, Tapping Treatment, therapist near me"
-  />
+    content="Therapy Chester, EFT Tapping Therapy, EFT Therapy, Professional Therapist, Talk with a Therapist, Counselling Chester, Chester, Flintshire"
+    />
   <meta name="robots" content="index, follow" />
   <meta name="author" content="Talk with Sian" />
   <meta name="geo.region" content="GB" />
@@ -25,16 +25,16 @@
   <meta name="ICBM" content="53.1905, -2.8919" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="EFT Tapping Therapy in Chester & Cheshire | Talk with Sian" />
-  <meta property="og:description" content="Manage anxiety, stress, and trauma with EFT Tapping. Talk with Sian offers Emotional Freedom Technique sessions for women in Chester & Cheshire." />
+  <meta property="og:title" content="Therapy Chester – EFT Tapping Therapy & Professional Support in Chester & Flintshire" />
+  <meta property="og:description" content="Manage anxiety, stress, and trauma with our expert EFT Tapping Therapy. Talk with a professional therapist at Talk with Sian for trusted support in Therapy Chester and across Flintshire." />
   <meta property="og:url" content="https://www.talkwithsian.com/eft-therapy" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="images/logo-talk-with-sian.jpg" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="EFT Tapping Therapy in Chester & Cheshire | Talk with Sian" />
-  <meta name="twitter:description" content="Release negative emotions and find relief from anxiety or trauma through EFT Tapping with Talk with Sian. Remote sessions available." />
+  <meta name="twitter:title" content="Therapy Chester – EFT Tapping Therapy & Professional Support in Chester & Flintshire" />
+  <meta name="twitter:description" content="Release negative emotions and overcome stress with our EFT Tapping Therapy. Talk with a therapist for expert support in Therapy Chester and across Chester & Flintshire." />
   <meta name="twitter:image" content="images/logo-talk-with-sian.jpg" />
 
   <!-- Canonical -->
@@ -379,7 +379,7 @@
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="eft-therapy.html">EFT Tapping</a></li>
               <li><a class="dropdown-item" href="trauma-therapy.html">Trauma Therapy</a></li>
-              <li><a class="dropdown-item" href="cbt-therapy.html">CBT Therapy</a></li>
+              <li><a class="dropdown-item" href="person-centred-therapy.html">Person Centred Therapy</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -405,21 +405,18 @@
   <div class="container content-container flex-grow-1 pt-5 mt-5">
     <!-- Hero Section -->
     <div class="hero-section d-flex-column justify-content-center align-items-center">
-      <h1>EFT Tapping Therapy</h1>
-      <p>Transform anxiety, stress, or emotional blocks with a gentle, hands-on approach that soothes both mind and body.</p>
-      <a class="gradient-button mt-4" href="contact.html">Book a Session</a>
+      <h1>EFT Tapping Therapy in Chester</h1>
+      <p>
+        Transform anxiety, stress, and emotional blocks with our expert EFT Tapping Therapy. 
+      </p>
+      <a class="gradient-button mt-4" href="contact.html">Book Your Session</a>
     </div>
 
     <!-- WHAT IS EFT (short paragraphs with more images) -->
     <div class="row mb-5 align-items-center">
       <h2 class="section-title">What Is EFT Tapping?</h2>
       <div class="col-md-6">
-        <img
-          src="images/eft-tapping-overview.jpg"
-          alt="EFT Tapping overview"
-          class="img-fluid rounded-shadow"
-          style="max-height: 300px;"
-        />
+        <img src="images/eft-tapping-overview.jpg" alt="EFT Therapy in Therapy Chester" class="img-fluid rounded-shadow" style="max-height: 300px;" />
         <img
           src="images/mind-body-connection.jpg"
           alt="Mind-body connection"
@@ -437,7 +434,7 @@
         </p>
         <p>
           By working with both mind and body, EFT helps you release tension and
-          restore balance to your energy system. Many women in Chester & Cheshire
+          restore balance to your energy system. Many women in Chester & Flintshire
           have reported feeling immediate relief, noticing shifts in anxiety or
           emotional overwhelm in just a few sessions.
         </p>
@@ -499,7 +496,7 @@
           appointment in Chester or a virtual session, you’ll receive the same
           level of empathic, knowledgeable support.
         </p>
-        <a class="gradient-button mt-3" href="contact.html">Schedule a Session</a>
+        <a class="gradient-button mt-3" href="contact.html">Schedule Your Session</a>
       </div>
       <div class="col-md-6">
         <img
