--- a/person-centred-therapy.html
+++ b/person-centred-therapy.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Person Centred Therapy Near Me | Talk with Sian</title>
+  <title>Person Centred Therapy in Therapy Chester – Empathetic, Remote Sessions in Chester & Flintshire | Talk with Sian</title>
 
   <!-- Primary SEO Meta Tags -->
   <meta
     name="description"
-    content="Looking for Person Centred Therapy near you? Talk with Sian provides Person Centred therapy for anxiety, depression, and stress. Remote sessions across Chester & Flintshire."
-  />
+    content="Experience transformative Person Centred Therapy in Therapy Chester. Talk with Sian offers empathetic, remote sessions for depression, anxiety, and stress across Chester & Flintshire. Talk with a therapist who cares."
+    />
   <meta
     name="keywords"
-    content="person centred therapy near me, therapy for depression, person centred therapy, therapy near me, babcp accreditation, mental health support, chester therapy, therapy services Flintshire"
-  />
+    content="Person Centred Therapy, Therapy Chester, Professional Therapy, Talk with a Therapist, Mental Health Support, Chester Therapy, Therapy Services Flintshire"
+    />
   <meta name="robots" content="index, follow" />
   <meta name="author" content="Talk with Sian" />
   <meta name="geo.region" content="GB" />
@@ -22,16 +22,16 @@
   <meta name="ICBM" content="53.1905, -2.8919" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Person Centred Therapy Near Me | Talk with Sian" />
-  <meta property="og:description" content="Transform the way you see yourself and your challenges with Person Centred Therapy. Talk with Sian offers remote sessions across Chester & Flintshire." />
+  <meta property="og:title" content="Person Centred Therapy in Therapy Chester – Remote, Empathetic Sessions" />
+  <meta property="og:description" content="Transform your life with empathetic Person Centred Therapy in Therapy Chester. Talk with a therapist and access remote sessions across Chester & Flintshire for depression, anxiety, and stress support." />
   <meta property="og:url" content="https://www.talkwithsian.com/person-centred-therapy" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="images/logo-talk-with-sian.jpg" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Person Centred Therapy Near Me | Talk with Sian" />
-  <meta name="twitter:description" content="Looking for Person Centred Therapy near you? Talk with Sian provides remote sessions for depression, anxiety, and stress across Chester & Flintshire." />
+  <meta name="twitter:title" content="Person Centred Therapy in Therapy Chester – Remote Sessions in Chester & Flintshire" />
+  <meta name="twitter:description" content="Access empathetic Person Centred Therapy in Therapy Chester. Talk with a therapist via remote sessions available across Chester & Flintshire for your mental health support." />
   <meta name="twitter:image" content="images/logo-talk-with-sian.jpg" />
 
   <!-- Canonical -->
@@ -309,9 +309,9 @@
   <div class="container content-container flex-grow-1">
     <!-- HERO SECTION -->
     <div class="hero-section">
-      <h1>Person Centred Therapy</h1>
+      <h1>Person Centred Therapy in Chester</h1>
       <p class="text-white">
-        Experience a genuine therapeutic relationship built on empathy, understanding, and respect for you as an individual.
+        Experience a genuine therapeutic relationship built on empathy, understanding, and respect.
       </p>
     </div>
 
@@ -327,9 +327,9 @@
       <div class="col-md-6">
         <h2>What Is Person Centred Therapy?</h2>
         <p>
-          Person Centred Therapy is a humanistic approach focusing on your capacity for self-discovery and personal growth. 
-          By creating a safe, non-judgemental environment, this therapy empowers you to explore your thoughts, feelings, 
-          and experiences on your own terms—fostering genuine self-awareness and lasting change.
+          Person Centred Therapy is a humanistic approach that empowers you to tap into your own potential for self-discovery 
+          and personal growth. At Talk with Sian, we create a safe, non-judgemental environment where you can 
+          explore your feelings and experiences—fostering genuine self-awareness and lasting change for individuals across Chester & Flintshire.
         </p>
         <p>
           Person Centred Therapy is particularly effective if you seek a <strong>collaborative, empathetic</strong> space 
@@ -423,7 +423,7 @@
           All Services
         </a>
         <a href="contact.html" class="btn-sian">
-          Start Your Sessions
+          Start Your Journey
         </a>
       </div>
     </div>
