--- a/trauma-therapy.html
+++ b/trauma-therapy.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Trauma Therapy in Chester & Cheshire | Talk with Sian</title>
+  <title>Trauma Therapy in Therapy Chester – Professional Trauma Counselling in Chester & Flintshire | Talk with Sian</title>
 
   <!-- SEO Meta Tags -->
   <meta
     name="description"
-    content="Heal from past experiences with specialised Trauma Therapy. Talk with Sian offers remote counselling for PTSD, domestic abuse, and more, serving women in Chester, Cheshire, and beyond."
-  />
+    content="Heal from past trauma with professional counselling in Therapy Chester. Talk with a therapist at Talk with Sian offers remote trauma therapy for PTSD, domestic abuse, and more in Chester & Flintshire."
+    />
   <meta
     name="keywords"
-    content="trauma therapy, domestic abuse counselling, PTSD support, therapy near me, trauma therapist Chester, trauma therapy Cheshire, therapist near me"
-  />
+    content="Therapy Chester, Trauma Therapy, Professional Trauma Counselling, Domestic Abuse Support, PTSD Support, Trauma Therapist, Counselling Chester, Chester, Flintshire"
+    />
   <meta name="robots" content="index, follow" />
   <meta name="author" content="Talk with Sian" />
   <meta name="geo.region" content="GB" />
@@ -22,16 +22,16 @@
   <meta name="ICBM" content="53.1905, -2.8919" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Trauma Therapy in Chester & Cheshire | Talk with Sian" />
-  <meta property="og:description" content="Overcome the impact of domestic abuse, PTSD, or childhood trauma. Experience remote therapy sessions with Talk with Sian in Chester & Cheshire." />
+  <meta property="og:title" content="Trauma Therapy in Therapy Chester – Professional Trauma Counselling in Chester & Flintshire" />
+  <meta property="og:description" content="Overcome domestic abuse, PTSD, or childhood trauma with professional trauma therapy. Talk with a therapist at Talk with Sian for remote counselling in Therapy Chester & Flintshire." />
   <meta property="og:url" content="https://www.talkwithsian.com/trauma-therapy" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="images/logo-talk-with-sian.jpg" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Trauma Therapy in Chester & Cheshire | Talk with Sian" />
-  <meta name="twitter:description" content="Find hope and healing from trauma, PTSD, or abuse. Talk with Sian offers remote therapy sessions for women in Chester, Cheshire, and beyond." />
+  <meta name="twitter:title" content="Trauma Therapy in Therapy Chester – Professional Trauma Counselling in Chester & Flintshire" />
+  <meta name="twitter:description" content="Find healing from trauma with expert counselling. Talk with a therapist at Talk with Sian offers remote trauma therapy in Therapy Chester and across Chester & Flintshire." />
   <meta name="twitter:image" content="images/logo-talk-with-sian.jpg" />
 
   <!-- Canonical -->
@@ -283,7 +283,7 @@
               <li><hr class="dropdown-divider" /></li>
               <li><a class="dropdown-item" href="eft-therapy.html">EFT Tapping</a></li>
               <li><a class="dropdown-item" href="trauma-therapy.html">Trauma Therapy</a></li>
-              <li><a class="dropdown-item" href="cbt-therapy.html">CBT Therapy</a></li>
+              <li><a class="dropdown-item" href="person-centred-therapy.html">Person Centred Therapy</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -309,9 +309,11 @@
   <div class="container content-container flex-grow-1">
     <!-- HERO SECTION -->
     <div class="hero-section">
-      <h1>Trauma Therapy</h1>
-      <p>A supportive, compassionate approach to help you heal from past experiences and rediscover emotional balance.</p>
-    </div>
+      <h1>Trauma Therapy in Chester</h1>
+      <p>
+        Experience professional trauma counselling that helps you heal from past abuse, PTSD, or painful memories.
+      </p>
+          </div>
 
     <!-- WHY TRAUMA THERAPY -->
     <div class="row align-items-center g-5 mb-5 py-4">
@@ -324,16 +326,16 @@
           these memories in a structured, empathetic way.
         </p>
         <p>
+          Many women have found that our tailored approach not only addresses these imprints but also restores hope and resilience in their daily lives across Chester & Flintshire.
+        </p>        
+        <p>
           My goal is to help you reclaim your sense of security and identity,
           offering <strong>renewed resilience</strong> and hope.
         </p>
       </div>
       <div class="col-md-6">
-        <img
-          src="images/why-trauma-therapy.jpg"
-          alt="Why Trauma Therapy"
-          class="img-fluid rounded-shadow"
-        />
+        <img src="images/why-trauma-therapy.jpg" alt="Trauma Therapy in Therapy Chester" class="img-fluid rounded-shadow" />
+
       </div>
     </div>
 
@@ -370,7 +372,7 @@
       <div class="col-lg-6 order-lg-1">
         <h2>Our Therapeutic Approach</h2>
         <p>
-          I integrate several **evidence-based** modalities tailored to your unique needs:
+          I integrate several <strong>evidence-based</strong> modalities tailored to your unique needs:
         </p>
         <p><strong>Person-Centred Counselling:</strong> Provides a safe, non-judgemental space at your pace.</p>
         <p><strong>EFT Tapping:</strong> Eases emotional distress by gently tapping acupressure points while focusing on traumatic memories.</p>
@@ -393,8 +395,7 @@
           familiar environment—minimising stress and logistical barriers.
         </p>
         <p>
-          Whether you’re in Chester, elsewhere in Cheshire, or beyond, distance no
-          longer stands between you and the support you deserve.
+          Whether you’re in Chester, or in Flintshire, our secure remote sessions ensure you receive professional trauma counselling wherever you are.
         </p>
       </div>
       <div class="col-md-6">
@@ -415,8 +416,8 @@
           and future. If you’re prepared to take that step, I’m here to walk
           alongside you with compassion, insight, and unwavering support.
         </p>
-        <a href="services.html" class="btn-sian-outline me-3">Explore All Services</a>
-        <a href="contact.html" class="btn-sian">Request a Session</a>
+        <a href="services.html" class="btn-sian-outline me-3">Explore All Therapy Options</a>
+        <a href="contact.html" class="btn-sian">Request a Trauma Therapy Session</a>        
       </div>
     </div>
   </div><!-- END .content-container -->
