--- a/contact.html
+++ b/contact.html
@@ -6,18 +6,18 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   />
-  <title>Contact Me for Personalised Therapy in Chester & Flintshire | Talk with Sian</title>
+  <title>Contact Therapy Chester – Talk with a Professional Therapist for EFT Therapy & Counselling in Chester & Flintshire</title>
   <link rel="icon" href="images/logo-talk-with-sian.jpg" type="image/jpeg" />
   <link href="css/contact.css" rel="stylesheet" />
 
   <meta
     name="description"
-    content="Get in touch with Talk with Sian to schedule your remote therapy session in Chester & Flintshire. I offer personalised support for women."
-  />
+    content="Connect with Talk with Sian for remote EFT therapy and professional counselling in Chester & Flintshire. Talk with a therapist today for personalised support."
+    />
   <meta
     name="keywords"
-    content="contact therapy Chester, counselling Flintshire contact, remote therapy, mental health support, Talk with Sian contact"
-  />
+    content="Therapy Chester, Professional Therapist, Talk with a Therapist, EFT Therapy, Counselling Chester, Chester, Flintshire"
+    />
   <meta name="robots" content="index, follow" />
   <meta name="author" content="Talk with Sian" />
   <meta name="geo.region" content="GB" />
@@ -29,24 +29,24 @@
   <meta name="ICBM" content="53.1905, -2.8919" />
   <meta
     property="og:title"
-    content="Contact Me | Talk with Sian – Personalised Therapy in Chester & Flintshire"
-  />
+    content="Contact Therapy Chester – Talk with a Professional Therapist in Chester & Flintshire"
+    />
   <meta
     property="og:description"
-    content="Reach out to Talk with Sian for compassionate and personalised therapy services in Chester & Flintshire."
-  />
+    content="Reach out for remote EFT therapy and professional counselling in Chester & Flintshire. Talk with a therapist today for personalised care."
+    />
   <meta property="og:url" content="https://www.talkwithsian.com/contact" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="images/logo-talk-with-sian.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta
     name="twitter:title"
-    content="Contact Me | Talk with Sian – Personalised Therapy in Chester & Flintshire"
-  />
+    content="Contact Therapy Chester – Talk with a Professional Therapist in Chester & Flintshire"
+    />
   <meta
     name="twitter:description"
-    content="Contact Talk with Sian to start your journey to well-being with expert counselling services in Chester & Flintshire."
-  />
+    content="Connect with Talk with Sian for remote EFT therapy and professional counselling in Chester & Flintshire. Talk with a therapist today for expert support."
+    />
   <meta name="twitter:image" content="images/logo-talk-with-sian.jpg" />
   <link rel="canonical" href="https://talkwithsian.com/contact/" />
 
@@ -132,12 +132,14 @@
   <div class="container content-container flex-grow-1 d-flex-column align-items-center justify-content-center pt-5 mt-5">
 
     <div class="contact-hero-section my-5 py-5 px-3 mb-4">
-      <h1>Contact Talk with Sian</h1>
+      <h1>Talk with a Professional Therapist</h1>
       <p class="lead p-md-3 text-white">
-        I offer remote counselling services for women across Chester &amp; Flintshire. Get in touch to schedule a session or ask any questions.
+        I provide remote EFT therapy and compassionate counselling for women in Chester &amp; Flintshire. Talk with me today to book your session or ask any questions.
       </p>
-      <a href="services.html">Explore My Services</a>
-    </div>
+      <a href="services.html" class="btn btn-primary">
+        Book Your Session – Talk with a Therapist
+      </a>
+          </div>
 
     <div class="contact-form-section p-4 mb-4">
       <h2 class="text-center mb-3">Reach Out for Remote Session Enquiries</h2>
@@ -177,7 +179,9 @@
         <input type="checkbox" name="botcheck" style="display:none;" />
 
         <div class="mx-auto d-flex justify-content-center align-items-center">
-          <button type="submit" style="max-width:200px">Submit</button>
+          <button type="submit" style="max-width:300px">
+            Book Your Session Today
+          </button>              
         </div>
       </form>
       <p id="formResponse" style="text-align:center; margin-top:20px;"></p>
