--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Updated Title & Meta for Improved SEO -->
-    <title>Talk with Sian – Expert Female Counselling & Therapy in Chester & Flintshire</title>
+    <title>Therapy Chester – Professional Therapist, EFT Therapy & Counselling in Chester & Flintshire</title>
     <meta
-      name="description"
-      content="Looking for a female counsellor in Chester & Flintshire? Talk with Sian offers expert, confidential therapy for women – specializing in EFT Tapping, trauma counselling, and person-centred support. Book your free consultation today."
-    />
-    <meta
-      name="keywords"
-      content="therapist, counsellor, therapist near me, EFT Tapping, Emotional Freedom Therapy, Emotional Freedom Tapping, Tapping Therapy, domestic abuse counselling, CBT for depression, bacp accreditation, compassion focused therapy"
-    />
+  name="description"
+  content="Looking for therapy in Chester? Talk with a professional therapist offering EFT therapy and confidential counselling services in Chester & Flintshire. Book your consultation today."
+/>
+
+<meta
+name="keywords"
+content="Therapy Chester, Professional Therapist, Talk with a Therapist, EFT Therapy, Counselling Chester, Chester, Flintshire"
+/>
+
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Talk with Sian" />
     <meta name="geo.region" content="GB-CHS" />
@@ -23,13 +25,15 @@
 
     <!-- Open Graph / Facebook -->
     <meta
-      property="og:title"
-      content="Talk with Sian – Expert Female Counselling & Therapy in Chester & Flintshire"
-    />
-    <meta
-      property="og:description"
-      content="Discover expert female counselling and confidential therapy for women in Chester & Flintshire. Specializing in EFT Tapping, trauma counselling, and person-centred therapy. Book your free consultation today."
-    />
+    property="og:title"
+    content="Therapy Chester – Professional Therapist, EFT Therapy & Counselling in Chester & Flintshire"
+  />
+  
+  <meta
+  property="og:description"
+  content="Looking for therapy in Chester? Talk with a professional therapist for EFT therapy and tailored counselling services in Chester & Flintshire. Book your session today."
+/>
+
     <meta property="og:url" content="https://talkwithsian.com/" />
     <meta
       property="og:image"
@@ -41,13 +45,15 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
-      name="twitter:title"
-      content="Talk with Sian – Expert Female Counselling & Therapy in Chester & Flintshire"
-    />
-    <meta
-      name="twitter:description"
-      content="Looking for a trusted female counsellor in Chester & Flintshire? Talk with Sian offers confidential, expert therapy for women. Book your free consultation today."
-    />
+  name="twitter:title"
+  content="Therapy Chester – Professional Therapist, EFT Therapy & Counselling in Chester & Flintshire"
+/>
+
+<meta
+name="twitter:description"
+content="Seeking therapy in Chester? Talk with a professional therapist providing EFT therapy and confidential counselling services in Chester & Flintshire. Contact us today."
+/>
+
     <meta
       name="twitter:image"
       content="https://talkwithsian.com/images/logo-talk-with-sian.jpg"
@@ -170,7 +176,7 @@
                 <li><hr class="dropdown-divider" /></li>
                 <li><a class="dropdown-item" href="eft-therapy.html">EFT Tapping</a></li>
                 <li><a class="dropdown-item" href="trauma-therapy.html">Trauma Therapy</a></li>
-                <li><a class="dropdown-item" href="cbt-therapy.html">CBT Therapy</a></li>
+                <li><a class="dropdown-item" href="person-centred-therapy.html">Person Centred Therapy</a></li>
               </ul>
             </li>
 
@@ -214,12 +220,12 @@
 
       <!-- Hero Section -->
       <div class="hero-section my-4">
-        <h1>Expert Female Counselling in Chester &amp; Flintshire</h1>
+        <h1>Professional Therapy in Chester</h1>
         <p class="lead text-white">
-          Dedicated, confidential therapy for women seeking compassionate support in Chester &amp; Flintshire.
+          Confidential EFT therapy and tailored counselling services in Chester & Flintshire. 
         </p>
         <a class="btn btn-primary btn-lg my-5" href="contact.html" role="button">
-          Book Your Session with the Best Female Therapist
+          Book Your Consultation with a Professional Therapist
         </a>
       </div>
 
@@ -230,25 +236,25 @@
             <div class="nav-card">
               <img
                 src="images/talk-with-sian-services.jpg"
-                alt="Therapy Services in Chester"
-              />
-              <h3>Expert Counselling &amp; Therapy for Women</h3>
-              <p class="py-0 py-lg-3 py-xl-0">
-                Discover tailored services including EFT Tapping, trauma-informed counselling, and person-centred therapy—designed exclusively for women in Chester &amp; Flintshire.
-              </p>
-              <a href="services.html">Expert Counselling Services</a>
-            </div>
+                alt="Therapy Chester – Expert EFT Therapy & Counselling"
+                />
+                <h3>Therapy Chester: Expert EFT Therapy & Counselling</h3>
+                <p class="py-0 py-lg-3 py-xl-0">
+                  Discover personalised EFT therapy and counselling services provided by a professional therapist in Chester & Flintshire.
+                </p>
+                <a href="services.html">Explore EFT Therapy & Counselling</a>
+              </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-4">
             <div class="nav-card">
               <img
                 src="images/talk-with-sian-about.jpg"
-                alt="About Sian, Therapist in Cheshire"
-              />
-              <h3>Meet Sian – Your Trusted Female Counsellor</h3>
-              <p>
-                Learn about Sian’s compassionate, patient, and expert approach to therapy. As a fully BACP-accredited therapist, she is dedicated to empowering women in Chester &amp; Flintshire.
-              </p>
+                alt="Meet Sian – Professional Therapist in Chester & Flintshire"
+                />
+                <h3>Meet Sian – Your Professional Therapist in Chester</h3>
+                <p>
+                  Learn about my compassionate and professional approach. As a fully accredited therapist, I provide expert EFT therapy and counselling services in Chester & Flintshire.
+                </p>
               <a href="about.html">Meet Sian</a>
             </div>
           </div>
@@ -256,13 +262,13 @@
             <div class="nav-card">
               <img
                 src="images/talk-with-sian-contact.jpg"
-                alt="Contact Therapist in Chester"
-              />
+                alt="Contact a Professional Therapist in Chester"
+                />
               <h3>Contact Me</h3>
               <p class="py-3 py-xl-0">
-                Get in touch today for a consultation. I am an experienced counsellor in Chester & Flintshire, here to support you with my expert guidance.
+                Contact a professional therapist for EFT therapy and counselling services in Chester & Flintshire. Reach out today for your consultation.
               </p>
-              <a href="contact.html">Get in Touch</a>
+              <a href="contact.html">Talk with a Professional Therapist Today</a>
             </div>
           </div>
         </div>
