added for women to each page

--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@
     <div class="about-section" id="my-story">
       <h2 class="text-center">My Story – A Journey of Professional Counselling in Chester &amp; Flintshire</h2>
       <p>
-        At Talk with Sian, I believe in the transformative power of expert, professional counselling. I founded my practice with a vision to create a safe, supportive space where evidence-based therapy meets compassionate care. With a commitment to excellence as one of the best therapists in Chester &amp; Flintshire, my journey has empowered countless individuals to achieve a thriving mental health journey.
+        At Talk with Sian, I believe in the transformative power of expert, professional counselling. I founded my practice with a vision to create a safe, supportive space where evidence-based therapy meets compassionate care. With a commitment to excellence as one of the best therapists in Chester &amp; Flintshire, I’ve had the privilege of empowering countless women on their journey to mental and emotional wellbeing.
       </p>
     </div>
 
