--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ content="Seeking therapy in Chester? Talk with a professional therapist providin
       <div class="hero-section my-4">
         <h1>Professional Therapy in Chester</h1>
         <p class="lead text-white">
-          Confidential EFT therapy and tailored counselling services in Chester & Flintshire. 
+          Confidential EFT therapy and tailored counselling services for women in Chester & Flintshire. 
         </p>
         <a class="btn btn-primary btn-lg my-5" href="contact.html" role="button">
           Book Your Consultation with a Professional Therapist
