--- a/person-centred-therapy.html
+++ b/person-centred-therapy.html
@@ -348,7 +348,7 @@
           your own insights and breakthroughs.
         </p>
         <p>
-          <strong>Key advantages:</strong><br/>
+          <strong>Key advantages for women:</strong><br/>
           &bull; Deep sense of acceptance and understanding<br/>
           &bull; Empowering focus on self-discovery<br/>
           &bull; Flexible pace aligned with your needs
